# vsb-diploma-thesis

./: .gitignore  CMakeLists.txt  README.md  clean_yml.py  doxygen.config  main.cpp  test.yml  trained.yml
core/: camera.cpp  camera.h  classifier_criteria.cpp  classifier_criteria.h  classifier_terms.cpp  classifier_terms.h  dataset_info.cpp  dataset_info.h  group.cpp  group.h  hash_key.cpp  hash_key.h  hash_table.cpp  hash_table.h  hash_table_candidate.cpp  hash_table_candidate.h  match.cpp  match.h  neighbourhood.cpp  neighbourhood.h  particle.cpp  particle.h  result.cpp  result.h  scene.cpp  scene.h  template.cpp  template.h  template_group.cpp  template_group.h  template_match.cpp  template_match.h  triplet.cpp  triplet.h  triplet_params.cpp  triplet_params.h  value_point.cpp  value_point.h  window.cpp  window.h
data/: clean_yml.py  convert.txt  convert_kinectv2.txt  convert_primesense.txt  download.sh  meshes.txt  results.yml  templates.txt  templates_kinectv2.txt  templates_primesense.txt  trained.txt  trained_kinectv2.txt  trained_primesense.txt  trained_templates.txt
data/02/: gt.yml  info.yml
data/25/: gt.yml  info.yml
data/29/: gt.yml  info.yml
data/30/: gt.yml  info.yml
data/bing/: ObjNessB2W8MAXBGR.idx  ObjNessB2W8MAXBGR.wS1  ObjNessB2W8MAXBGR.xP
data/models/: info.yml
data/models_reconst/: obj_02.ply  obj_03.ply  obj_04.ply  obj_05.ply  obj_06.ply  obj_09.ply  obj_10.ply  obj_11.ply  obj_12.ply  obj_13.ply  obj_14.ply  obj_15.ply  obj_16.ply  obj_17.ply  obj_18.ply  obj_19.ply  obj_20.ply  obj_21.ply  obj_22.ply  obj_23.ply  obj_24.ply  obj_25.ply  obj_26.ply  obj_27.ply  obj_28.ply  obj_29.ply  obj_30.ply
data/obj_01/: obj_info.yml
data/obj_09/: obj_info.yml
data/results_no_errode/kinectv2/: results_02.yml
data/scene_01/: gt.yml  info.yml  scene_info.yml
data/shaders/: depth.frag  depth.vert  depth_normal.frag  depth_normal.vert  normal.frag  normal.vert
data/trained/: classifier.yml
glcore/: frame_buffer.cpp  frame_buffer.h  mesh.cpp  mesh.h  shader.cpp  shader.h
objdetect/: classifier.cpp  classifier.h  fine_pose.cpp  fine_pose.h  hasher.cpp  hasher.h  hashing.cpp  hashing.h  matcher.cpp  matcher.h  matching.cpp  matching.h  matching_deprecated.cpp  matching_deprecated.h  objectness.cpp  objectness.h  template_matcher.cpp  template_matcher.h
processing/: computation.cpp  computation.h  processing.cpp  processing.h
utils/: converter.cpp  converter.h  convertor.cpp  convertor.h  evaluator.cpp  evaluator.h  glutils.cpp  glutils.h  parser.cpp  parser.h  template_parser.cpp  template_parser.h  timer.cpp  timer.h  utils.cpp  utils.h  validator.cpp  validator.h  visualizer.cpp  visualizer.h
